Sample config file cerated

--- a/Hal/Hal.csproj
+++ b/Hal/Hal.csproj
@@ -42,7 +42,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="hal.config.js" />
+    <Content Include="hal.js" />
+    <Content Include="hal.config.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
